argocd/tronbyt/tronbyt.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: tronbyt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tronbyt
  namespace: tronbyt
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tronbyt
  replicas: 1
  template:
    metadata:
      labels:
        app: tronbyt
      annotations:
        backup.velero.io/backup-volumes-excludes: tronbyt,seedbox,scratch
    spec:
      containers:
      - name: tronbyt
        image: ghcr.io/tronbyt/server:2.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: http-web-svc
        volumeMounts:
        - mountPath: "/app/data"
          name: data
          subPath: data
        - mountPath: "/app/users"
          name: data
          subPath: users
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: tronbyt-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: tronbyt-service
  namespace: tronbyt
spec:
  selector:
    app: tronbyt
  type: ClusterIP
  ports:
  - name: tronbyt-web-port
    protocol: TCP
    port: 8000
    targetPort: http-web-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tronbyt
  namespace: tronbyt
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: tronbyt.jibby.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tronbyt-service
                port:
                  number: 8000
